--- a/dein.toml
+++ b/dein.toml
@@ -31,3 +31,5 @@ repo = 'prabirshrestha/asyncomplete.vim'
 [[plugins]]
 repo = 'prabirshrestha/asyncomplete-lsp.vim'
 
+[[plugins]]
+repo = 'easymotion/vim-easymotion'
