--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -65,3 +65,7 @@ on_ft = ['fish']
 [[plugins]]
 repo = 'rust-lang/rust.vim'
 on_ft = ['rust']
+
+[[plugins]]
+repo = 'thoughtbot/vim-rspec'
+on_ft = ['ruby']
