added color and added plugins align,pairs

--- a/dein.toml
+++ b/dein.toml
@@ -53,3 +53,9 @@ depends = 'fzf'
 
 [[plugins]]
 repo = 'tpope/vim-commentary'
+
+[[plugins]]
+repo = 'junegunn/vim-easy-align'
+
+[[plugins]]
+repo = 'jiangmiao/auto-pairs'
